# yunilang

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  generic_struct  renovate.json  simple_alias  simple_generics
docs/: compiler-usage.md  initializers.md  language-overview.md  ownership.md  pattern-match.md  println-builtin.md  standard-library.md  syntax.md  type-system.md
examples/: arithmetic.yuni  generic_struct.yuni  generics.yuni  go_style_types.yuni  hello.yuni  initializer_comprehensive.yuni  initializer_hashmap.yuni  initializer_simple.yuni  initializer_test.yuni  initializer_vec.yuni  option_result.yuni  parse_demo.rs  simple.yuni  simple_alias.yuni  simple_generics.yuni  simple_if_error.yuni  simple_vec.yuni  type_syntax_demo.yuni
src/: compiler.rs  error.rs  lib.rs  main.rs
src/analyzer/: analyzer.rs  borrow_checker.rs  lifetime.rs  mod.rs  monomorphization.rs  semantic_analyzer.rs  symbol.rs  tail_position.rs  type_checker.rs  type_env.rs  type_inference.rs
src/ast/: declarations.rs  expressions.rs  mod.rs  patterns.rs  program.rs  span.rs  statements.rs  types.rs
src/codegen/: code_generator.rs  codegen.rs  expr_codegen.rs  mod.rs  runtime.rs  stmt_codegen.rs  symbol_table.rs  tail_call.rs  (+1 more)
tests/: analyzer_test.rs  ast_test.rs  borrow_checker_test.rs  codegen_test.rs  error_handling_test.rs  generic_inference_test.rs  generics_test.rs  integration_test.rs  lexer_test.rs  lifetime_test.rs  match_test.rs  memory_safety_test.rs  monomorphization_test.rs  parser_test.rs  println_test.rs  struct_field_test.rs  tail_recursion_test.rs
(+76 files in other folders)
