[package]
name = "yunilang"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A compiler for the Yuni programming language"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yuniruyuni/yunilang"

[lib]
name = "yunilang"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]

[[bin]]
name = "yunilang"
path = "src/main.rs"

[dependencies]
# LLVM bindings
inkwell = { version = "0.5", features = ["llvm18-0"] }
llvm-sys = "180.0"

# Command line argument parsing
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Lexer/Parser utilities
logos = "0.14"
nom = "7.1"

# Data structures
indexmap = "2.2"

# Pretty printing and diagnostics
colored = "2.1"
codespan-reporting = "0.11"

# Serialization (for AST dumping, etc.)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Temporary files
tempfile = "3.10"

[dev-dependencies]
# Testing utilities
pretty_assertions = "1.4"
test-case = "3.3"

[build-dependencies]
# For LLVM configuration
cc = "1.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 0
debug = true
